tests/negative/test_cast_eval_p_non_null.orb
fnc main () () {
    eval (sym (x 0) (p (& x)));
    eval (cast ptr p);
};